--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/main.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/main.css
@@ -11,11 +11,9 @@
   left: 0;
   top: 0;
   width: 100%;
-  /* padding: 0 20px; */
   background: #fff;
   z-index: 9999;
 }
-
 #header .inner {
   height: 70px;
   margin: 0 auto;
@@ -170,7 +168,6 @@
 /* main */
 /* .main_video 메인 비디오 */
 .main_video  {
-  position: relative;
   cursor: grab;
 }
 .main_video .swiper-slide {
@@ -301,7 +298,6 @@
 .main_worker {
   background: url(../images/main_mid_bg_02_new.jpg) no-repeat left center / cover;
   padding: 250px 0 360px;
-  margin-top: 130px;
 }
 .main_worker .inner {
   max-width: 1320px;
@@ -450,6 +446,9 @@
 .main_news .news li + li {
   margin-left: 7.8125%;
 }
+.main_news .img_wrap img {
+  width: 100%;
+}
 
 .main_news .txt_wrap {
   margin-top: 40px;
@@ -492,6 +491,7 @@
   color: var(--txt-color-400);
   line-height: 1.4em;
   padding-top: 20px;
+  font-weight: 300;
 }
 
 .main_news .more_btn {
@@ -529,8 +529,7 @@
 
 /* 메인 커리어 .main_careers */
 .main_careers {
-  padding-bottom: 125px;
-  margin-bottom: 165px;
+  padding-bottom: 300px;
 }
 .main_careers .inner {
   max-width: 1320px;
@@ -616,6 +615,7 @@
   color: #999;
   margin-bottom: 15px;
   line-height: 1.6;
+  font-weight: 300;
 }
 #footer .award {
   margin-bottom: 30px;
@@ -654,6 +654,7 @@
 #footer .copyright {
   font-size: 14px;
   color: #999;
+  font-weight: 300;
 }
 #footer .family_wrap {
   position: relative;
@@ -876,7 +877,7 @@
 
   /* 태블릿 메인 인트로 .main_intro */
   .main_intro .tit_wrap {
-    padding: 150px 0 70px;
+    padding: 90px 0 70px;
   }
   .main_intro .tit_wrap h2 {
     font-size: 5.5vw;
@@ -889,7 +890,7 @@
   }
   .main_intro .col_left p {
     font-size: 2.1vw;
-    padding-bottom: 36px;
+    padding-bottom: 23px;
   }
   .main_intro .col_right {
     width: calc(60% - 5px);
@@ -999,7 +1000,7 @@
 
   /* 태블릿 메인 커리어 .main_careers */
   .main_careers {
-    margin-bottom: 0;
+    padding-bottom: 165px;
   }
   .main_careers h2 {
     font-size: 42px;
@@ -1298,9 +1299,7 @@
     margin-left: 0;
     margin-top: 40px;
   }
-  .main_news .img_wrap {
-    text-align: center;
-  }
+
   .main_news .category {
     font-size: 13px;
   }
