--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/css/common.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/css/common.css
@@ -497,6 +497,27 @@ textarea {
   margin-left: 20px;
 }
 
+.point_btn3 {
+  font-size: 17px;
+  font-weight: 700;
+  color: #fff;
+  display: flex;
+  gap: 0 10px;
+  justify-content: center;
+  align-items: center;
+  width: 185px;
+  /* flex구조면 line-height 대신 height 써도 됨 */
+  height: 60px;
+  border-radius: 30px;
+  background: linear-gradient(-115deg,  #008A43, #2AD47D);
+}
+.point_btn3::before {
+  content: '';
+  width: 18px;
+  height: 15px;
+  background: url(../images/icon_list.svg) no-repeat 50% 50% / contain;
+}
+
 /* 라벨 버튼 */
 [class*='label_btn'] {
   display: inline-flex;
@@ -682,52 +703,48 @@ caption.nohead {
 /* board_list: 게시물 리스트, board_view: 게시물 보기, board_write(게시물 쓰기), board_modify(게시물 수정) */
 /* 게시판 리스트 */
 .board_list {
-  border-top: 1px solid #000;
+  border-top: 3px solid #000;
 }
 /* 칸에서 수직 정렬이 기본값이며 vertical-align: top 등으로 수직정렬 변경 가능 */
 .board_list th {
-  height: 60px;
+  height: 100px;
   font-weight: 500;
-  color: var(--gray-600);
-  background: #f5f5f5;
-  border-bottom: 1px solid #eee;
+  font-size: 20px;
+  color: #333;
+  border-bottom: 1px solid #707070;
 }
 .board_list td {
-  height: 60px;
-  border-bottom: 1px solid #eee;
+  height: 100px;
+  color: var(--gray-600);
+  border-bottom: 1px solid #707070;
+  font-weight: 700;
   text-align: center;
 }
 .board_list .td_left {
   text-align: left;
 }
-.board_list tr:last-child td {
-  border-bottom: 1px solid #ddd;
-}
-/* 표의 칸이 3칸일 경우 두칸만 길이를 정하면 나머지 한칸은 알아서 정해짐 */
+
 .board_list .col1 {
-  width: 9%;
+  width: 8.5%;
 }
 .board_list .col3 {
-  width: 13%;
+  width: 14%;
+}
+.board_list .col4 {
+  width: 15%;
 }
 
-/* display: -webkit-box는 가로가 100%이므로 빈 공간도 클릭됨 */
-/* .board_list .link_btn {
-  border: 1px solid red;
+.board_list a {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
   overflow: hidden;
-} */
-/* 빈 공간 클릭이 안되도록 한줄 말줄임 */
-.board_list .link_btn {
-  /* 표를 글자 만큼 선택 */
-  display: inline-block;
-  white-space: nowrap;
-  /* width: 100%를 하면 block element와 다를게 없어지기 때문에 내용에 영향을 받는 max-width를 이용 */
-  max-width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  font-weight: 500;
+  color: var(--gray-400);
+}
+.board_list .date {
+  color: #999;
+  font-weight: 500;
 }
 
 /* a태그에 줄간격, 폰트관련 기본값이 상속되며 최소크기가 지정되어 줄어들지 않으면 크기를 직접 지정 */
@@ -741,84 +758,228 @@ caption.nohead {
 }
 
 
-/* 모바일 환경에서 게시판 번호 삭제 */
-@media (max-width: 767px) {
-  .board_list tr th:first-child,
-  .board_list tr td:first-child {
-    display: none;
-  }
-  .board_list .col3 {
-    width: 25%;
-  }
-  .board_list th {
-    height: 50px;
-    font-size: 15px;
-  }
-  .board_list td {
-  font-size: 14px;
-  }
-  .board_list .td_left {
-    padding: 0 10px;
-  }
-}
 
-
-/* 페이지네이션 */
+/* 게시판 페이지네이션 */
 .board_pagination {
-  margin-top: 20px;
+  margin-top: 40px;
   display: flex;
   justify-content: center;
 }
 .board_pagination .page_btn {
   display: inline-block;
-  width: 22px;
-  height: 40px;
-  /* border: 2px solid red; */
+  width: 32px;
+  height: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.board_pagination .page_btn::before {
-  content: '';
-  background: url(../images/sprite_pc.png) no-repeat ;
-  width: 14px;
-  height: 14px;
-  /* border: 1px solid black; */
-}
-.board_pagination .first::before {
-  background-position: -397px -310px;
-}
-.board_pagination .prev::before {
-  width: 8px;
-  background-position: -369px -182px;
-}
-.board_pagination .next::before {
-  width: 8px;
-  background-position: -30px -431px;
-}
-.board_pagination .last::before {
-  background-position: -443px -388px;
+.board_pagination .first {
+  background: url(../images/common/page_two.svg) no-repeat 50% 50%;
 }
 .board_pagination .prev {
-  margin-right: 13px;
+  margin-right: 20px;
+  background: url(../images/common/page_one.svg) no-repeat 50% 50%;
 }
 .board_pagination .next {
-  margin-left: 13px;
+  margin-left: 20px;
+  background: url(../images/common/page_one.svg) no-repeat 50% 50%;
+  transform: rotate(180deg);
+}
+.board_pagination .last {
+  background: url(../images/common/page_two.svg) no-repeat 50% 50%;
+  transform: rotate(180deg);
 }
 .board_pagination .num {
-  width: 40px;
-  line-height: 38px;
+  width: 32px;
+  line-height: 32px;
+  font-size: 17px;
   text-align: center;
-  border: 1px solid #eee;
-}
-.board_pagination .num + .num {
-  margin-left: 10px;
+  border-radius: 50%;
+  color: #999;
 }
 .board_pagination .active {
   border: var(--point--color1);
   background: var(--point--color1);
   color: #fff;
 }
+
+
+/* 게시물 보기 */
+.board_view .view_tit {
+  padding: 40px;
+  display: flex;
+  gap: 0 40px;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 2px solid #000;
+  border-bottom: #ddd 1px solid;
+}
+.board_view .view_tit h3 {
+  font-size: 32px;
+  font-weight: 700;
+  color: var(--gray-600);
+  line-height: 1.2;
+}
+.board_view .view_tit .date {
+  /* h3의 글자가  많을 경우 date의 글자가 다음줄로 넘어가는 현상 발생한다. 이 때 width를 잡아주거나 flex-shrink: 1을 0으로 바꿔준다. */
+  flex-shrink: 0;
+  color: #999;
+}
+.board_view .view_con {
+  padding: 80px 40px;
+}
+.board_view .view_paging {
+  display: flex;
+}
+.board_view .view_paging {
+  border-top: 1px solid #ddd;
+}
+.board_view .view_paging + .view_paging {
+  border-bottom: 1px solid #ddd;
+}
+.board_view .view_paging dt {
+  width: 200px;
+  background: #F8F8F8;
+  color: #999;
+  font-weight: 500;
+  padding: 20px 0;
+  text-align: center;
+  flex-shrink: 0;
+}
+.board_view .view_paging dd {
+  padding: 20px 0 20px 50px;
+}
+.board_view .view_paging a {
+  color: var(--gray-400);
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+.board_view .btn_wrap {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+
+@media (max-width: 1200px) {
+  .board_list th {
+    height: 70px;
+    font-size: 17px;
+  }
+  .board_list td {
+    height: 70px;
+    font-size: 16px;
+  }
+
+  .board_view .view_tit {
+    padding: 20px;
+  }
+  .board_view .view_tit h3 {
+    font-size: 26px;
+  }
+  .board_view .view_tit .date {
+    font-size: 14px;
+  }
+  .board_view .view_con {
+    padding: 40px 20px;
+  }
+  .board_view .view_paging dt {
+    width: 160px;
+    font-size: 16px;
+    padding: 15px 0;
+  }
+  .board_view .view_paging dd {
+    font-size: 16px;
+    padding: 15px 0 15px 30px;
+  }
+  .board_view .btn_wrap .point_btn3 {
+    height: 50px;
+    width: 180px;
+  }
+}
+
+/* 모바일 환경에서 게시판 번호 삭제 */
+@media (max-width: 767px) {
+  .board_list .col3 {
+    width: 40px;
+  }
+  .board_list .col4 {
+    width: 80px;
+  }
+
+  .board_list thead th:first-child {
+    display: none;
+  }
+  .board_list td:first-child {
+    display: none;
+  }
+  .board_list th {
+    height: 50px;
+    font-size: 14px;
+  }
+  .board_list td {
+    height: 50px;
+    font-size: 13px;
+  }
+  .board_list .td_left {
+    padding-right: 30px;
+  }
+
+  .board_pagination .page_btn {
+    width: 28px;
+    height: 28px;
+  }
+  .board_pagination .num {
+    width: 28px;
+    line-height: 28px;
+    font-size: 13px;
+  }
+  .board_pagination .prev {
+    margin-right: 5px;
+  }
+  .board_pagination .next {
+    margin-left: 5px;
+  }
+
+  .board_view .view_tit {
+    padding: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .board_view .view_tit h3 {
+    font-size: 18px;
+  }
+  .board_view .view_tit .date {
+    font-size: 12px;
+    margin-top: 10px;
+  }
+  .board_view .view_con {
+    padding: 20px 0;
+  }
+  .board_view .view_paging dt {
+    width: 80px;
+    font-size: 13px;
+    padding: 10px 0;
+
+  }
+  .board_view .view_paging dd {
+    font-size: 13px;
+    padding: 10px 0 10px 10px;
+  }
+  .board_view .btn_wrap .point_btn3 {
+    height: 40px;
+    width: 160px;
+    font-size: 14px;
+  }
+  .board_view .btn_wrap .point_btn3::before {
+    width: 14px;
+    height: 12px;
+  }
+}
+
+
 
 /* 게시판 쓰기 */
 .board_write_wrap .note {
