--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/넥슨게임즈반응형_강인구/css/common.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/넥슨게임즈반응형_강인구/css/common.css
@@ -971,6 +971,7 @@ caption.nohead {
 
   .tbl th {
     height: 56px;
+    padding: 18px 0;
     font-size: 18px;
   }
   .tbl td {
@@ -1040,11 +1041,12 @@ caption.nohead {
   }
 
   .tbl th {
-    height: 56px;
-    font-size: 18px;
+    height: 44px;
+    padding: 12px 0;
+    font-size: 12px;
   }
   .tbl td {
-    font-size: 18px;
+    font-size: 12px;
   }
 }
 
