--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/14_빙그레(컬럼슬라이더그리드변경)/css/common.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/14_빙그레(컬럼슬라이더그리드변경)/css/common.css
@@ -192,10 +192,10 @@ body, input, select, textarea, button, table {
 }
 
 /* 텍스트 선택 컬러 */
-/* ::selection {
-  background: #333;
-  color: #ffffff;
-} */
+::selection {
+  background: #000;
+  color: #fff;
+}
 
 /* legend,caption, 섹션제목 안보이게 */
 legend, caption, .blind {
